--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <link rel="stylesheet" href="styles.css">
+<title>Homepage - Snelsterendier</title>
 </head>
 <body>
 
-<h1>Heloo testing </h1>
+<h1>Hello There!</h1>
 
 </body>
 </html>
