--- a/index.html
+++ b/index.html
@@ -11,3 +11,10 @@
   
 </body>
 </html>
+<head>
+  <meta property="og:title" content="I eat humans with ranch">
+  <meta property="og:description" content="Delicious and crunchy!">
+  <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
+  <meta property="og:url" content="https://snelsterendier.com">
+  <meta property="og:type" content="website">
+</head>
