--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </html>
 <head>
   <meta property="og:title" content="I eat humans with ranch">
-  <meta property="og:description" content="Delicious and crunchy!">
+  <meta property="og:description" content="Im not a skid i swear!">
   <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
   <meta property="og:url" content="https://snelsterendier.com">
   <meta property="og:type" content="website">
