--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 </body>
 </html>
 <head>
-  <meta property="og:title" content="I eat humans with ranch">
-  <meta property="og:description" content="Im not a skid i swear!">
+  <meta property="og:title" content="I eat humans with ranch 🍽️">
+  <meta property="og:description" content="Crunchy, spicy, and dipped in the finest ranch sauce!">
   <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
   <meta property="og:url" content="https://snelsterendier.com">
   <meta property="og:type" content="website">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="I eat humans with ranch 🍽️">
+  <meta name="twitter:description" content="Crunchy, spicy, and dipped in the finest ranch sauce!">
+  <meta name="twitter:image" content="https://snelsterendier.com/RanchMan.jpg">
 </head>
+
