--- a/index.html
+++ b/index.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
-<title>Homepage - Snelsterendier</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Snelsterendier – Home</title>
+<meta name="description" content="Snelsterendier – Whimsical dark-humor monsters, safely fictional with playful stats.">
+<meta property="og:title" content="Snelsterendier – Home">
+<meta property="og:description" content="Whimsical dark-humor monsters, safely fictional.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="assets/images/hero.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Snelsterendier – Home">
+<meta name="twitter:description" content="Whimsical dark-humor monsters, safely fictional.">
+<meta name="twitter:image" content="assets/images/hero.jpg">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-  <h1>Hello There!</h1>
-    <p>I Eat humans!</p>
-  
+<header>
+  <nav aria-label="Main Navigation">
+    <ul class="nav-list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="srhoe-quotes.html">SRHOE Quotes</a></li>
+      <li><a href="gambling.html">SnelCoins</a></li>
+      <li><a href="wall-of-shame.html">Wall of Shame</a></li>
+      <li><a href="hall-of-fame.html">Hall of Fame</a></li>
+      <li><a href="how-to-prepare.html">How to Prepare</a></li>
+      <li><a href="who-am-i.html">Who Am I?</a></li>
+      <li><a href="random-things.html">Random Things</a></li>
+      <li><a href="language.html">Language</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+<section class="hero">
+  <h1>Welcome to Snelsterendier</h1>
+  <p class="age-warning">I am going to eat you.</p>
+  <img src="assets/images/hero.jpg" alt="Snelsterendier Hero Illustration">
+</section>
+
+<section class="daily-stats">
+  <h2>Today's Whimsical Stats</h2>
+  <div class="stats-grid">
+    <div class="stat-card">
+      <h3>Monsters Seen</h3>
+      <p>REPLACETHISABC</p>
+    </div>
+    <div class="stat-card">
+      <h3>I eat Humans.</h3>
+      <p>They're VERY tasty with Ranch!</p>
+    </div>
+    <div class="stat-card">
+      <h3>Happy Screeches</h3>
+      <p>REPLACETHISABC</p>
+    </div>
+  </div>
+</section>
+</main>
+
+<footer>
+  <p>&copy; 2025 Snelsterendier | Don't make me eat you!</p>
+</footer>
 </body>
 </html>
-<head>
-  <meta property="og:title" content="I eat humans with ranch">
-  <meta property="og:description" content="Dont make me eat you, I AM NOT A SKID OKAY... I sponsor poor pentesters like https://lidor.info/">
-  <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
-  <meta property="og:url" content="https://snelsterendier.com">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="I eat humans with ranch">
-  <meta name="twitter:description" content="Dont make me eat you, I AM NOT A SKID OKAY... I sponsor poor pentesters like https://lidor.info/">
-  <meta name="twitter:image" content="https://snelsterendier.com/RanchMan.jpg">
-</head>
-
