--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snelsterendier – Home</title>
-<meta name="description" content="Snelsterendier – Whimsical dark-humor monsters, safely fictional with playful stats.">
-<meta property="og:title" content="Snelsterendier – Home">
-<meta property="og:description" content="Whimsical dark-humor monsters, safely fictional.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="assets/images/hero.jpg">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Snelsterendier – Home">
-<meta name="twitter:description" content="Whimsical dark-humor monsters, safely fictional.">
-<meta name="twitter:image" content="assets/images/hero.jpg">
+  <meta property="og:title" content="I eat humans with ranch">
+  <meta property="og:description" content="Dont make me eat you, I AM NOT A SKID OKAY... I sponsor poor pentesters like https://lidor.info/">
+  <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
+  <meta property="og:url" content="https://snelsterendier.com">
+  <meta property="og:type" content="website">
+  <Title: Snelsterendier - Home>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="I eat humans with ranch">
+  <meta name="twitter:description" content="Dont make me eat you, I AM NOT A SKID OKAY... I sponsor poor pentesters like https://lidor.info/">
+  <meta name="twitter:image" content="https://snelsterendier.com/RanchMan.jpg">
+</head>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
