--- a/index.html
+++ b/index.html
@@ -34,29 +34,10 @@
 
 <main>
 <section class="hero">
-  <h1>Welcome to Snelsterendier</h1>
+  <h1>Welcome to Snelsterendier's paradise</h1>
   <p class="age-warning">I am going to eat you.</p>
   <img src="assets/images/hero.jpg" alt="Snelsterendier Hero Illustration">
 </section>
-
-<section class="daily-stats">
-  <h2>Today's Whimsical Stats</h2>
-  <div class="stats-grid">
-    <div class="stat-card">
-      <h3>Monsters Seen</h3>
-      <p>REPLACETHISABC</p>
-    </div>
-    <div class="stat-card">
-      <h3>I eat Humans.</h3>
-      <p>They're VERY tasty with Ranch!</p>
-    </div>
-    <div class="stat-card">
-      <h3>Happy Screeches</h3>
-      <p>REPLACETHISABC</p>
-    </div>
-  </div>
-</section>
-</main>
 
 <footer>
   <p>&copy; 2025 Snelsterendier | Don't make me eat you!</p>
