--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li><a href="how-to-prepare.html">How to Prepare</a></li>
       <li><a href="who-am-i.html">Who Am I?</a></li>
       <li><a href="random-things.html">Random Things</a></li>
-      <li><a href="language.html">Language</a></li>
+      <li><a href="language.html">My Language</a></li>
     </ul>
   </nav>
 </header>
@@ -40,7 +40,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Snelsterendier | Don't make me eat you!</p>
+  <p>&copy; 2025 Snelsterendier | Humans are tastier with Ranch.</p>
 </footer>
 </body>
 </html>
