--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <section class="hero">
   <h1>Welcome to Snelsterendier's paradise</h1>
   <p class="age-warning">I am going to eat you.</p>
-  <img src="assets/images/hero.jpg" alt="Snelsterendier Hero Illustration">
+  <img src="RanchMan.jpg" alt="Hmm humans">
 </section>
 
 <footer>
