--- a/srhoe-quotes.html
+++ b/srhoe-quotes.html
@@ -3,42 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SRHOE Quotes – Snelsterendier</title>
-<meta name="description" content="Wall of whimsical monster quotes. All edgy content replaced with REPLACETHISABC.">
+<title>Srhoe Quotes – Snelsterendier</title>
+
+<!-- Open Graph -->
+<meta property="og:title" content="Srhoe Quotes – Words of Chaos">
+<meta property="og:description" content="A wall of wisdom, threats, and nonsense from the world of Snelsterendier. Edgy content safely replaced with REPLACETHISABC.">
+<meta property="og:image" content="assets/images/quotes-hero.jpg">
+<meta property="og:url" content="https://snelsterendier.com/srhoe-quotes.html">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Srhoe Quotes – Words of Chaos">
+<meta name="twitter:description" content="Read the most chaotic quotes and threats from Snelsterendier. REPLACETHISABC.">
+<meta name="twitter:image" content="assets/images/quotes-hero.jpg">
+
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <header>
   <nav aria-label="Main Navigation">
     <ul class="nav-list">
       <li><a href="index.html">Home</a></li>
-      <li><a href="srhoe-quotes.html" class="active">SRHOE Quotes</a></li>
+      <li><a href="srhoe-quotes.html" class="active">Srhoe Quotes</a></li>
       <li><a href="gambling.html">SnelCoins</a></li>
       <li><a href="wall-of-shame.html">Wall of Shame</a></li>
       <li><a href="hall-of-fame.html">Hall of Fame</a></li>
       <li><a href="how-to-prepare.html">How to Prepare</a></li>
       <li><a href="who-am-i.html">Who Am I?</a></li>
       <li><a href="random-things.html">Random Things</a></li>
-      <li><a href="language.html">Language</a></li>
+      <li><a href="language.html">My Language</a></li>
     </ul>
   </nav>
 </header>
 
 <main>
-<section>
-  <h1>SRHOE Quotes Wall</h1>
-  <p>All edgy or human-related content replaced with <strong>REPLACETHISABC</strong>.</p>
-  <ul class="quotes-wall">
-    <li>"REPLACETHISABC"</li>
-    <li>"REPLACETHISABC"</li>
-    <li>"REPLACETHISABC"</li>
-  </ul>
-  <p class="note">Moderation placeholder: new quotes go here.</p>
-</section>
+  <section class="quotes-hero">
+    <h1>Srhoe Quotes Wall</h1>
+    <p class="age-warning">All edgy content safely replaced with <strong>REPLACETHISABC</strong>. Viewer discretion advised.</p>
+    <img src="assets/images/quotes-hero.jpg" alt="Srhoe quotes chaotic illustration">
+  </section>
+
+  <section class="quotes-gallery">
+    <h2>Quotes & Threats</h2>
+    <p>Here lies the chaos. Import your screenshots of Srhoe's sayings here:</p>
+    <div class="quotes-grid">
+      <div class="quote-card">
+        <img src="assets/images/placeholder-quote1.jpg" alt="Quote 1">
+      </div>
+      <div class="quote-card">
+        <img src="assets/images/placeholder-quote2.jpg" alt="Quote 2">
+      </div>
+      <div class="quote-card">
+        <img src="assets/images/placeholder-quote3.jpg" alt="Quote 3">
+      </div>
+    </div>
+    <p class="note">Srhoe is actually a Great guy for making Owlsec, Join via; https://discord.gg/owlsec/.</p>
+  </section>
 </main>
 
 <footer>
-  <p>&copy; 2025 Snelsterendier | All content fictional & whimsical</p>
+  <p>&copy; 2025 Snelsterendier | Humans are tastier with Ranch.</p>
 </footer>
+
 </body>
 </html>
