--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
   <nav aria-label="Main Navigation">
     <ul class="nav-list">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="srhoe-quotes.html">Srhoe Quotes</a></li>
       <li><a href="gambling.html">SnelCoins</a></li>
       <li><a href="wall-of-shame.html">Wall of Shame</a></li>
