--- a/srhoe-quotes.html
+++ b/srhoe-quotes.html
@@ -59,7 +59,7 @@
         <img src="assets/images/placeholder-quote3.jpg" alt="Quote 3">
       </div>
     </div>
-    <p class="note">Srhoe is actually a Great guy for making Owlsec, Join via; https://discord.gg/owlsec/.</p>
+    <p class="note">Srhoe is actually a Great guy, Join his great community via; https://discord.gg/owlsec/.</p>
   </section>
 </main>
 
