--- a/srhoe-quotes.html
+++ b/srhoe-quotes.html
@@ -6,8 +6,8 @@
 <title>Srhoe Quotes – Snelsterendier</title>
 
 <!-- Open Graph -->
-<meta property="og:title" content="Srhoe Quotes – Words of Chaos">
-<meta property="og:description" content="A wall of wisdom, threats, and nonsense from the world of Snelsterendier. Edgy content safely replaced with REPLACETHISABC.">
+<meta property="og:title" content="Srhoe Quotes – Words of Wisdom">
+<meta property="og:description" content="A wall of wisdom, threats, and nonsense from Srhoe.">
 <meta property="og:image" content="assets/images/quotes-hero.jpg">
 <meta property="og:url" content="https://snelsterendier.com/srhoe-quotes.html">
 <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
 <meta name="twitter:description" content="Read the most chaotic quotes and threats from Snelsterendier. REPLACETHISABC.">
 <meta name="twitter:image" content="assets/images/quotes-hero.jpg">
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="src/style.css">
 </head>
 <body>
 
@@ -39,11 +39,6 @@
 </header>
 
 <main>
-  <section class="quotes-hero">
-    <h1>Srhoe Quotes Wall</h1>
-    <p class="age-warning">All edgy content safely replaced with <strong>REPLACETHISABC</strong>. Viewer discretion advised.</p>
-    <img src="assets/images/quotes-hero.jpg" alt="Srhoe quotes chaotic illustration">
-  </section>
 
   <section class="quotes-gallery">
     <h2>Quotes & Threats</h2>
@@ -59,7 +54,7 @@
         <img src="assets/images/placeholder-quote3.jpg" alt="Quote 3">
       </div>
     </div>
-    <p class="note">Srhoe is actually a Great guy, Join his great community via; https://discord.gg/owlsec/.</p>
+    <p class="note">Srhoe is actually a Great guy for making Owlsec, Join via; https://discord.gg/owlsec/.</p>
   </section>
 </main>
 
