--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="og:url" content="https://snelsterendier.com">
   <meta property="og:type" content="website">
   <Title: Snelsterendier - Home>
+  <link rel="icon" type="image/png" href="EatingHumans.png">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="I eat humans with ranch">
