--- a/srhoe-quotes.html
+++ b/srhoe-quotes.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Srhoe Quotes – Snelsterendier</title>
-
+<link rel="icon" type="image/png" href="EatingHumans.png">
 <!-- Open Graph -->
 <meta property="og:title" content="Srhoe Quotes – Words of Wisdom">
 <meta property="og:description" content="A wall of wisdom, threats, and nonsense from Srhoe.">
