--- a/srhoe-quotes.html
+++ b/srhoe-quotes.html
@@ -17,8 +17,8 @@
 <meta name="twitter:title" content="Srhoe Quotes – Words of Chaos">
 <meta name="twitter:description" content="Read the most chaotic quotes and threats from Snelsterendier. REPLACETHISABC.">
 <meta name="twitter:image" content="assets/images/quotes-hero.jpg">
-
-<link rel="stylesheet" href="src/style.css">
+  
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
