--- a/gambling.html
+++ b/gambling.html
@@ -52,19 +52,20 @@
   </section>
 
   <!-- Play Tokens -->
-  <section class="tokens">
-    <h2>Your SnelCoins Balance</h2>
-    <p><strong>Balance:</strong> 666 SnelCoins 🪙</p>
-    <button class="btn">Bet Everything</button>
-    <button class="btn">Beg for More</button>
-    <button class="btn">Cry in the Corner</button>
-    <p class="note">This is play money. If you’re trying to actually gamble, REPLACETHISABC – you’re in the wrong place.</p>
-  </section>
+    <section class="tokens">
+      <h2>Your SnelCoins Balance</h2>
+      <p id="balance"><strong>Balance:</strong> 🪙</p>
+      <button class="btn" onclick="betEverything()">Bet Everything</button>
+      <button class="btn" onclick="begForMore()">Beg for More</button>
+      <button class="btn" onclick="cryCorner()">Cry in the Corner</button>
+      <p class="note">This is play money. If you’re trying to actually gamble, REPLACETHISABC – you’re in the wrong place.</p>
+    </section>
 </main>
 
 <footer>
   <p>&copy; 2025 Snelsterendier | All gambling here is fake, satirical, and chaotic.</p>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
