--- a/gambling.html
+++ b/gambling.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snelsterendier – SnelCoins Gambling</title>
+<title>Snelsterendier – SnelCoins Casino</title>
 
 <!-- Open Graph -->
-<meta property="og:title" content="SnelCoins – The Only Casino That Eats You First">
-<meta property="og:description" content="Bet on nonsense. Lose SnelCoins. Win absolutely nothing but bragging rights and REPLACETHISABC.">
+<meta property="og:title" content="SnelCoins Casino – Fake Gambling for Fake Monsters">
+<meta property="og:description" content="Play slots, flip coins, roll dice. All with fake SnelCoins. No money, just chaos and REPLACETHISABC.">
 <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
 <meta property="og:url" content="https://snelsterendier.com/gambling.html">
 <meta property="og:type" content="website">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="SnelCoins – The Casino Nobody Asked For">
-<meta name="twitter:description" content="Monsters don’t gamble with money, they gamble with chaos. REPLACETHISABC included.">
+<meta name="twitter:title" content="SnelCoins Casino – Fake Gambling for Fake Monsters">
+<meta name="twitter:description" content="Bet your fake SnelCoins. Lose them gloriously. Win nothing of value. REPLACETHISABC approved.">
 <meta name="twitter:image" content="https://snelsterendier.com/RanchMan.jpg">
 
 <link rel="stylesheet" href="styles.css">
@@ -39,31 +39,50 @@
 </header>
 
 <main>
-  <!-- Betting Section -->
-  <section class="bets">
-    <h2>Place Your Absurd Bets</h2>
-    <p>Bet your SnelCoins on completely random nonsense:</p>
-    <ul class="bet-list">
-      <li>How many REPLACETHISABC will scream today?</li>
-      <li>Which monster eats the last slice of pizza?</li>
-      <li>Will ranch dressing finally run out this week?</li>
-    </ul>
-    <p class="note">Spoiler: you always lose. But at least you’ll have fun losing.</p>
+  <!-- Casino Intro -->
+  <section class="hero">
+    <h1>Welcome to the Totally Fake SnelCoins Casino 🎰</h1>
+    <p class="age-warning">⚠️ Reminder: This is all satire. No real money. No payouts. Only REPLACETHISABC.</p>
+    <img src="assets/images/hero.jpg" alt="Snelsterendier Gambling Hero">
+    <p id="balance"><strong>Balance:</strong> 🪙</p>
   </section>
 
-  <!-- Play Tokens -->
-    <section class="tokens">
-      <h2>Your SnelCoins Balance</h2>
-      <p id="balance"><strong>Balance:</strong> 🪙</p>
-      <button class="btn" onclick="betEverything()">Bet Everything</button>
-      <button class="btn" onclick="begForMore()">Beg for More</button>
-      <button class="btn" onclick="cryCorner()">Cry in the Corner</button>
-      <p class="note">This is play money. If you’re trying to actually gamble, REPLACETHISABC – you’re in the wrong place.</p>
-    </section>
+  <!-- Slot Machine -->
+  <section class="game">
+    <h2>Slot Machine 🎰</h2>
+    <p>Spin the reels. Hope for chaos.</p>
+    <div id="slots-display">🍕 | 🐸 | 👹</div>
+    <button class="btn" onclick="playSlots()">Spin (Cost: 50 🪙)</button>
+  </section>
+
+  <!-- Coin Flip -->
+  <section class="game">
+    <h2>Coin Flip 🪙</h2>
+    <p>Pick heads or tails. Pray to the ranch gods.</p>
+    <button class="btn" onclick="flipCoin('heads')">Bet Heads (Cost: 20 🪙)</button>
+    <button class="btn" onclick="flipCoin('tails')">Bet Tails (Cost: 20 🪙)</button>
+    <p id="coin-result"></p>
+  </section>
+
+  <!-- Dice Roll -->
+  <section class="game">
+    <h2>Dice Roll 🎲</h2>
+    <p>Pick a number between 1–6. Win big or lose fast.</p>
+    <input type="number" id="dice-choice" min="1" max="6" value="3">
+    <button class="btn" onclick="rollDice()">Roll (Cost: 30 🪙)</button>
+    <p id="dice-result"></p>
+  </section>
+
+  <!-- Cry in the Corner -->
+  <section class="game">
+    <h2>Cry in the Corner 😭</h2>
+    <p>Sometimes, all you can do is cry.</p>
+    <button class="btn" onclick="cryCorner()">Cry</button>
+  </section>
 </main>
 
 <footer>
-  <p>&copy; 2025 Snelsterendier | All gambling here is fake, satirical, and chaotic.</p>
+  <p>&copy; 2025 Snelsterendier | All gambling here is fake, satirical, and full of REPLACETHISABC.</p>
 </footer>
 
 <script src="script.js"></script>
