--- a/gambling.html
+++ b/gambling.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Snelsterendier - SnelCoins Casino</title>
 
-  <!-- Open Graph -->
   <meta property="og:title" content="SnelCoins Casino 🎰 Chaos with Ranch">
   <meta property="og:description" content="Fake gambling with fake money. Lose everything, cry in the corner, repeat. REPLACETHISABC.">
   <meta property="og:image" content="https://snelsterendier.com/RanchMan.jpg">
   <meta property="og:url" content="https://snelsterendier.com/gambling.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="SnelCoins Casino 🎰 Chaos with Ranch">
   <meta name="twitter:description" content="The only casino where you can’t cash out, only cry out. REPLACETHISABC.">
@@ -38,27 +36,20 @@
   </header>
 
   <main>
-    <!-- Hero -->
-    <section class="hero" aria-labelledby="hero-title">
-      <h1 id="hero-title">Welcome to the Totally Fake SnelCoins Casino 🎰</h1>
-      <p class="age-warning">⚠️ All play. No real money. REPLACETHISABC.</p>
-      <p id="balance" aria-live="polite"><strong>Balance:</strong> —</p>
-    </section>
 
     <!-- Controls: reset / beg -->
     <section class="tokens" aria-labelledby="tokens-title">
       <h2 id="tokens-title">Tokens & Controls</h2>
       <div class="controls-row">
-        <button id="reset-btn" class="btn" aria-label="Reset balance to 666">Reset Balance (666 🪙)</button>
-        <button id="beg-btn" class="btn" aria-label="Beg for more SnelCoins">Beg for More</button>
+        <button id="beg-btn" class="btn" aria-label="Beg for more SnelCoins">Beg for More (Like a Snorpinoti)</button>
       </div>
       <p class="note">Resetting goes back to 666 SnelCoins. Begging gives a random gift — still fake.</p>
     </section>
 
     <!-- Slot Machine -->
     <section class="game" aria-labelledby="slots-title">
-      <h2 id="slots-title">🎰 Slot Machine</h2>
-      <div id="slots-display" class="game-output" aria-live="polite">🍕 | 🐸 | 👹</div>
+      <h2 id="slots-title">Slot Machine</h2>
+      <div id="slots-display" class="game-output" aria-live="polite">X | X | X</div>
       <div class="controls-row">
         <button id="spin-btn" class="btn" aria-label="Spin the slot machine">Spin (Cost: 50 🪙)</button>
       </div>
@@ -66,7 +57,7 @@
 
     <!-- Coin Flip -->
     <section class="game" aria-labelledby="coin-title">
-      <h2 id="coin-title">🪙 Coin Flip</h2>
+      <h2 id="coin-title">Coin Flip</h2>
       <div class="controls-row">
         <button id="heads-btn" class="btn" aria-label="Bet heads">Bet Heads (Cost: 20 🪙)</button>
         <button id="tails-btn" class="btn" aria-label="Bet tails">Bet Tails (Cost: 20 🪙)</button>
@@ -76,7 +67,7 @@
 
     <!-- Dice Roll -->
     <section class="game" aria-labelledby="dice-title">
-      <h2 id="dice-title">🎲 Dice Roll</h2>
+      <h2 id="dice-title">Dice Roll</h2>
       <label for="dice-choice">Pick a number (1–6):</label>
       <input type="number" id="dice-choice" min="1" max="6" value="3" aria-describedby="dice-hint">
       <div class="controls-row">
@@ -87,18 +78,18 @@
 
     <!-- Cry -->
     <section class="game" aria-labelledby="cry-title">
-      <h2 id="cry-title">😭 Cry in the Corner</h2>
+      <h2 id="cry-title">Cry in the Corner</h2>
       <button id="cry-btn" class="btn" aria-label="Cry in the corner">Cry</button>
     </section>
 
     <!-- Small disclaimer -->
     <section class="warning" aria-live="polite">
-      <p><strong>Disclaimer:</strong> This is satire and fake play. No real currency, no real payouts. REPLACETHISABC.</p>
+      <p><strong>Disclaimer:</strong>I eat humans.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Snelsterendier | All games are silly, satirical, and covered in ranch.</p>
+    <p>&copy; 2025 Snelsterendier | Humans are tastier with ranch.</p>
   </footer>
 
   <!-- Script: make sure script.js is in the same directory as this file -->
