--- a/gambling.html
+++ b/gambling.html
@@ -43,7 +43,7 @@
       <div class="controls-row">
         <button id="beg-btn" class="btn" aria-label="Beg for more SnelCoins">Beg for More (Like a Snorpinoti)</button>
       </div>
-      <p class="note">Resetting goes back to 666 SnelCoins. Begging gives a random gift — still fake.</p>
+      <p class="note">Resetting goes back to 0 SnelCoins.</p>
     </section>
 
     <!-- Slot Machine -->
