--- a/gambling.html
+++ b/gambling.html
@@ -36,7 +36,14 @@
   </header>
 
   <main>
-
+  <!-- Casino Intro -->
+  <section class="hero">
+    <h1>Welcome to the Snelsterendier Casino</h1>
+    <p>Gambling is for non-skids.</p>
+    <img src="EatingHumans.png" alt="Yummers">
+    <p id="balance"><strong>Balance:</strong> 🪙</p>
+  </section>
+    
     <!-- Controls: reset / beg -->
     <section class="tokens" aria-labelledby="tokens-title">
       <h2 id="tokens-title">Tokens & Controls</h2>
