--- a/gambling.html
+++ b/gambling.html
@@ -48,9 +48,10 @@
     <section class="tokens" aria-labelledby="tokens-title">
       <h2 id="tokens-title">Tokens & Controls</h2>
       <div class="controls-row">
+        <button id="reset-btn" class="btn" aria-label="Reset balance to 666">Reset Balance (1337)</button>
         <button id="beg-btn" class="btn" aria-label="Beg for more SnelCoins">Beg for More (Like a Snorpinoti)</button>
       </div>
-      <p class="note">Resetting goes back to 0 SnelCoins.</p>
+      <p class="note">Resetting goes back to 1337 SnelCoins.</p>
     </section>
 
     <!-- Slot Machine -->
